# cdim

./: .gitignore  CMakeLists.txt  FindCDIM.cmake  README  cdim.cpp  cdim.kdev4
